Реализовано скачивание по клику фиксированного файла с фиксированного сайт

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,27 @@
 
 <body>
   <div class="test">
-    <h1>Test</h1>
+    <h1>Bible Pack Downloader</h1>
   </div>
+
+  <div class="input-data">
+    <div class="url input">
+      <label for="name"> Enter url:</label>
+      <input type="text" id="url-src" placeholder="app.thedigitalbiblelibrary.org">
+    </div>
+    <div class="paid input">
+      <label for="name"> Enter PAID:</label>
+      <input type="text" id="paid-src" placeholder="app.thedigitalbiblelibrary.org">
+    </div>
+    <div class="rev input">
+      <label for="name"> Enter revesion:</label>
+      <input type="text" id="rev-src" placeholder="app.thedigitalbiblelibrary.org">
+    </div>
+  </div>
+  <div class="download">
+    <button>download package</button>
+  </div>
+
 </body>
 
 </html>
