Добавлена возможность ввода api-kei, paid, rev,  type-content

--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,25 @@
   </div>
 
   <div class="input-data">
-    <div class="url input">
-      <label for="name"> Enter url:</label>
-      <input type="text" id="url-src" placeholder="app.thedigitalbiblelibrary.org">
+    <div class="api-key input">
+      <label for="name"> Enter API-key:</label>
+      <input type="password" id="key-src" placeholder="qwerty1234567">
     </div>
     <div class="paid input">
       <label for="name"> Enter PAID:</label>
-      <input type="text" id="paid-src" placeholder="app.thedigitalbiblelibrary.org">
+      <input type="text" id="paid-src" placeholder="9879dbb7cfe39e4d">
     </div>
     <div class="rev input">
       <label for="name"> Enter revesion:</label>
-      <input type="text" id="rev-src" placeholder="app.thedigitalbiblelibrary.org">
+      <input type="text" id="rev-src" placeholder="01">
+    </div>
+    <div class="text-content input">
+      <label for="name"> Select text-content:</label>
+      <select id="content-src">
+        <option value="html">html</option>
+        <option value="json">json</option>
+        <option value="text">text</option>
+      </select>
     </div>
   </div>
   <div class="download">
