Учитывается количество книг в переводе

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,9 @@
     </div>
   </div>
   <div class="download">
-    <button>download package</button>
+    <button>Download Package</button>
   </div>
+  <span class="label status" id="status-src">STATUS:</span>
 
 </body>
 
