Убрана кнопка используется div

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div class="download">
-    <button>Download Package</button>
+    Download Package
   </div>
   <span class="label status" id="status-src">STATUS:</span>
 
