--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
   </div>
 
   <div class="input-data">
+    <div class="api-url input">
+      <label for="url-src"> Enter URL site:</label>
+      <input type="text" id="url-src" placeholder="qwerty1234567">
+    </div>
     <div class="api-key input">
       <label for="key-src"> Enter API-key:</label>
       <input type="text" id="key-src" placeholder="qwerty1234567">
