Изменен placeholder  для ввода URL

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <div class="input-data">
     <div class="api-url input">
       <label for="url-src"> Enter URL site:</label>
-      <input type="text" id="url-src" placeholder="qwerty1234567">
+      <input type="text" id="url-src" placeholder="api.scripture.api.bible/v1">
     </div>
     <div class="api-key input">
       <label for="key-src"> Enter API-key:</label>
