fix: edit name h1

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="main">
-    <h1>Bible Pack Downloader</h1>
+    <h1>Bible Pack Downloader John 3:16</h1>
   </div>
 
   <div class="input-data">
